[gd_scene load_steps=3 format=3 uid="uid://qq5svt52ud6m"]

[ext_resource type="Script" path="res://menu-pg_2.gd" id="1_wnpd5"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_1qoob"]

[node name="Pg2" type="CanvasLayer"]
script = ExtResource("1_wnpd5")

[node name="Menu" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="Menu"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 80
theme_override_constants/margin_top = 350
theme_override_constants/margin_right = 80
theme_override_constants/margin_bottom = 100

[node name="VBoxContainer" type="VBoxContainer" parent="Menu/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 25

[node name="Label" type="Label" parent="Menu/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 62
text = "OPTIONS"

[node name="MarginContainer" type="MarginContainer" parent="Menu/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(2.08165e-12, 80)
layout_mode = 2

[node name="Back" type="Button" parent="Menu/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
theme_override_font_sizes/font_size = 40
theme_override_styles/normal = SubResource("StyleBoxEmpty_1qoob")
text = "Back"

[node name="MuteMusic" type="Button" parent="Menu/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
theme_override_font_sizes/font_size = 40
theme_override_styles/normal = SubResource("StyleBoxEmpty_1qoob")
text = "Mute Music"

[node name="MuteSFX" type="Button" parent="Menu/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
theme_override_font_sizes/font_size = 40
theme_override_styles/normal = SubResource("StyleBoxEmpty_1qoob")
text = "Mute SFX"

[node name="Restart" type="Button" parent="Menu/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
theme_override_font_sizes/font_size = 40
theme_override_styles/normal = SubResource("StyleBoxEmpty_1qoob")
text = "Restart Game"

[node name="ConfirmRestartLabel" type="Label" parent="Menu/MarginContainer/VBoxContainer"]
visible = false
layout_mode = 2
text = "Are you sure you want to restart?
Doing this will reset all your progress."
horizontal_alignment = 1

[node name="ConfirmRestartButtons" type="HBoxContainer" parent="Menu/MarginContainer/VBoxContainer"]
visible = false
layout_mode = 2

[node name="Confirm" type="Button" parent="Menu/MarginContainer/VBoxContainer/ConfirmRestartButtons"]
layout_mode = 2
size_flags_horizontal = 0
theme_override_font_sizes/font_size = 40
theme_override_styles/normal = SubResource("StyleBoxEmpty_1qoob")
text = "Confirm"

[node name="MarginContainer2" type="MarginContainer" parent="Menu/MarginContainer/VBoxContainer/ConfirmRestartButtons"]
custom_minimum_size = Vector2(230, 0)
layout_mode = 2

[node name="Cancel" type="Button" parent="Menu/MarginContainer/VBoxContainer/ConfirmRestartButtons"]
layout_mode = 2
size_flags_horizontal = 8
theme_override_font_sizes/font_size = 40
theme_override_styles/normal = SubResource("StyleBoxEmpty_1qoob")
text = "Cancel"

[connection signal="pressed" from="Menu/MarginContainer/VBoxContainer/Back" to="." method="_on_back_pressed"]
[connection signal="pressed" from="Menu/MarginContainer/VBoxContainer/Back" to="Menu" method="_on_start_btn_pressed"]
[connection signal="pressed" from="Menu/MarginContainer/VBoxContainer/MuteMusic" to="Menu" method="_on_options_btn_pressed"]
[connection signal="pressed" from="Menu/MarginContainer/VBoxContainer/MuteSFX" to="Menu" method="_on_options_btn_pressed"]
[connection signal="pressed" from="Menu/MarginContainer/VBoxContainer/Restart" to="." method="_on_restart_pressed"]
[connection signal="pressed" from="Menu/MarginContainer/VBoxContainer/Restart" to="Menu" method="_on_quit_btn_pressed"]
[connection signal="pressed" from="Menu/MarginContainer/VBoxContainer/ConfirmRestartButtons/Confirm" to="." method="_on_confirm_restart_pressed"]
[connection signal="pressed" from="Menu/MarginContainer/VBoxContainer/ConfirmRestartButtons/Confirm" to="Menu" method="_on_quit_btn_pressed"]
[connection signal="pressed" from="Menu/MarginContainer/VBoxContainer/ConfirmRestartButtons/Cancel" to="." method="_on_cancel_restart_pressed"]
[connection signal="pressed" from="Menu/MarginContainer/VBoxContainer/ConfirmRestartButtons/Cancel" to="Menu" method="_on_quit_btn_pressed"]
